--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArchiTech</title>
     <!-- css link  -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
+
 <body>
-    
+    <header class="">
+        <nav class="navbar">
+            <div>
+                <h2 class="logo">G3 Architects</h2>
+            </div>
+            <div class="nav-items">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact Us</li>
+                    <li>Login</li>
+                </ul>
+            </div>
+        </nav>
+        <section class="section-one">
+            <h2 class="header-title">Brand New <br class="br"> Group of Architects</h2>
+            <p class="header-slogan">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration
+                in <br class="br"> some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+            <div class="header-banner">
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
+    </header>
+    <main class="container">
+        <section class="section-two">
+            <div class="quick-list-section">
+                <div class="img-group">
+                     <img src="images/team1.png" alt="">
+                     <img src="images/team2.png" alt="">
+                     <img src="images/team3.png" alt="">
+                     <img src="images/team4.png" alt="">
+                </div>
+                <div class="quick-item">
+                    <h4><span class="quick-list">Quick list</span> of Our <br class="br"> <span class="features">Features</span></h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                        alteration in some form, by injected <br> humour, or randomised words which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
