--- a/index.html
+++ b/index.html
@@ -40,16 +40,60 @@
         <section class="section-two">
             <div class="quick-list-section">
                 <div class="img-group">
-                     <img src="images/team1.png" alt="">
-                     <img src="images/team2.png" alt="">
-                     <img src="images/team3.png" alt="">
-                     <img src="images/team4.png" alt="">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
                 </div>
                 <div class="quick-item">
-                    <h4><span class="quick-list">Quick list</span> of Our <br class="br"> <span class="features">Features</span></h4>
-                    <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                    <h4><span class="quick-list">Quick list</span> of Our <br class="br"> <span
+                            class="features">Features</span></h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have
+                        suffered
                         alteration in some form, by injected <br> humour, or randomised words which don't look even</p>
                     <button class="btn-primary">Explore More</button>
+                </div>
+            </div>
+        </section>
+        <section class="section-three">
+            <div class="features-section">
+                <div class="features-text-side">
+                    <div class="three-title">
+                        <div class="title-box">
+                        </div>
+                        <h2>Features you will <br class="br"> love & enjoy</h2>
+                    </div>
+                    <p class="f-p">There are many variations of passages of Lorem Ipsum available, but the <br class="br"> majority have suffered
+                        alteration in some form, by injected humour, or <br class="br"> randomised words which don't look even</p>
+                    <div class="features-cart">
+                        <h3>Desktop & Mobile Version</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                            alteration in some form, by <br> injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-cart">
+                        <h3>Drag & Drop Builder</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                            alteration in some form, by <br> injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-cart">
+                        <h3>Awesome Modern Design</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                            alteration in some form, by <br> injected humour, or randomised...........</p>
+                    </div>
+                    <div class="features-cart">
+                        <h3>Super Easy to Edit</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                            alteration in some form, by <br> injected humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="img-section">
+                    <div>
+                        <img src="images/architect.png" alt="">
+                    </div>
+                    <div class="img-bottom-box">
+                        <p class="ten">10+Year</p>
+                        <p class="exp">Experience</p>
+                    </div>
                 </div>
             </div>
         </section>
