--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </div>
         </section>
     </header>
-    <main class="container">
-        <section class="section-two">
+    <main class="">
+        <section class="section-two container">
             <div class="quick-list-section">
                 <div class="img-group">
                     <img src="images/team1.png" alt="">
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-three">
+        <section class="section-three container">
             <div class="features-section">
                 <div class="features-text-side">
                     <div class="three-title">
@@ -63,26 +63,32 @@
                         </div>
                         <h2>Features you will <br class="br"> love & enjoy</h2>
                     </div>
-                    <p class="f-p">There are many variations of passages of Lorem Ipsum available, but the <br class="br"> majority have suffered
-                        alteration in some form, by injected humour, or <br class="br"> randomised words which don't look even</p>
+                    <p class="f-p">There are many variations of passages of Lorem Ipsum available, but the <br
+                            class="br"> majority have suffered
+                        alteration in some form, by injected humour, or <br class="br"> randomised words which don't
+                        look even</p>
                     <div class="features-cart">
                         <h3>Desktop & Mobile Version</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have
+                            suffered
                             alteration in some form, by <br> injected humour, or randomised...........</p>
                     </div>
                     <div class="features-cart">
                         <h3>Drag & Drop Builder</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have
+                            suffered
                             alteration in some form, by <br> injected humour, or randomised...........</p>
                     </div>
                     <div class="features-cart">
                         <h3>Awesome Modern Design</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have
+                            suffered
                             alteration in some form, by <br> injected humour, or randomised...........</p>
                     </div>
                     <div class="features-cart">
                         <h3>Super Easy to Edit</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
+                        <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have
+                            suffered
                             alteration in some form, by <br> injected humour, or randomised...........</p>
                     </div>
                 </div>
@@ -97,7 +103,65 @@
                 </div>
             </div>
         </section>
+        <div class="some-facts container">
+            <h2>Some Facts</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
+                alteration.</p>
+        </div>
+        <section class="section-four container">
+            <div class="facts-section">
+                <div class="fact-box">
+                    <img class="fact-img" src="images/icons/ribon.png" alt="">
+                    <p class="number">54</p>
+                    <p class="title">Award Winnings</p>
+                </div>
+                <div class="fact-box">
+                    <img class="fact-img" src="images/icons/projects.png" alt="">
+                    <p class="number">150+</p>
+                    <p class="title">Project Finish</p>
+                </div>
+                <div class="fact-box">
+                    <img class="fact-img" src="images/icons/customers.png" alt="">
+                    <p class="number">60</p>
+                    <p class="title">Clients Worked</p>
+                </div>
+                <div class="fact-box">
+                    <img class="fact-img" src="images/icons/email.png" alt="">
+                    <p class="number">15230</p>
+                    <p class="title">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <div class="some-facts container">
+            <h2>Our Sponser</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
+                alteration.</p>
+        </div>
+        <section class="section-five container">
+            <div class="sponser-section"> 
+                <div class="spn-box">
+                    <img class="fact-img" src="images/sponsors/amazon.png" alt=""> 
+                </div>
+                <div class="spn-box">
+                    <img class="fact-img" src="images/sponsors/spotify.png" alt="">  
+                </div>
+                <div class="spn-box">
+                    <img class="fact-img" src="images/sponsors/google.png" alt=""> 
+                </div>
+                <div class="spn-box">
+                    <img class="fact-img" src="images/sponsors/telerama.png" alt=""> 
+                </div>
+                <div class="spn-box">
+                    <img class="fact-img" src="images/sponsors/figma.png" alt=""> 
+                </div>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div>
+            <p>@ All rights reserved copyright | <span>NoobDev 2023 </span></p>
+        </div>
+    </footer>
 </body>
 
 </html>
