--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </section>
         <div class="some-facts container">
             <h2>Some Facts</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
+            <p>There are many variations of passages of Lorem Ipsum available, but <br class="br"> the majority have suffered
                 alteration.</p>
         </div>
         <section class="section-four container">
@@ -157,9 +157,9 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div>
-            <p>@ All rights reserved copyright | <span>NoobDev 2023 </span></p>
+    <footer class="footer container">
+        <div class="copyright">
+            <p>© All right reserve > <a href="https://github.com/mehu-hub/" target="_blank">NoobDev</a></p>
         </div>
     </footer>
 </body>
